# metamore

./: LICENSE  README.md  pyproject.toml
metamore/: main.py
metamore/commands/: get.py  remove.py  transfer.py
tests/: test_functions.py  test_metamore.py  test_version.py
